# ChangeLog for dev-python/sphinx
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/dev-python/cvs-repo/gentoo-x86/dev-python/sphinx/ChangeLog,v 1.109 2012/04/17 21:59:32 ranger Exp $

  17 Apr 2012; Brent Baude <ranger@gentoo.org> sphinx-1.1.2.ebuild:
  Marking sphinx-1.1.2 ppc64 for bug 410115

  17 Apr 2012; Brent Baude <ranger@gentoo.org> sphinx-1.1.2.ebuild:
  Marking sphinx-1.1.2 ppc for bug 410115

  06 Apr 2012; Markus Meier <maekke@gentoo.org> sphinx-1.1.2.ebuild:
  arm stable, bug #410115

  04 Apr 2012; Jeff Horelick <jdhore@gentoo.org> sphinx-1.1.2.ebuild:
  marked x86 per bug 410115

  03 Apr 2012; Jeroen Roovers <jer@gentoo.org> sphinx-1.1.2.ebuild:
  Stable for HPPA (bug #410115).

  03 Apr 2012; Mike Gilbert <floppym@gentoo.org> sphinx-1.1.3-r2.ebuild:
  Fix generation of docs with python 3. Solution copied from Progress overlay.

*sphinx-1.1.3-r2 (02 Apr 2012)

  02 Apr 2012; Mike Gilbert <floppym@gentoo.org> +sphinx-1.1.3-r2.ebuild:
  Unrestrict python 3 and make the tests work.

*sphinx-1.1.3-r1 (31 Mar 2012)

  31 Mar 2012; Mike Gilbert <floppym@gentoo.org> +sphinx-1.1.3-r1.ebuild:
  Make sphinx-build wrapper respect EPYTHON. Ported from Progress.

  29 Mar 2012; Agostino Sarubbo <ago@gentoo.org> sphinx-1.1.2.ebuild:
  Stable for amd64, wrt bug #410115

*sphinx-1.1.3 (29 Mar 2012)

  29 Mar 2012; Dirkjan Ochtman <djc@gentoo.org> +sphinx-1.1.3.ebuild:
  Version bump to 1.1.3.

  29 Mar 2012; Dirkjan Ochtman <djc@gentoo.org> -sphinx-0.6.7.ebuild,
  -sphinx-1.1.ebuild:
  Remove old versions.

  10 Mar 2012; Justin Lecher <jlec@gentoo.org> sphinx-0.6.7.ebuild,
  sphinx-1.0.7.ebuild, sphinx-1.1.ebuild, sphinx-1.1.2.ebuild, metadata.xml:
  Remove restriction for pypy as jinja is fixed now

  10 Mar 2012; Justin Lecher <jlec@gentoo.org> sphinx-0.6.7.ebuild,
  sphinx-1.0.7.ebuild, sphinx-1.1.ebuild, sphinx-1.1.2.ebuild:
  Restrict pypy as dev-python/jinja doesn't support it
