@@ -1,10 +1,30 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST Sphinx-1.0.7.tar.gz 2285875 RMD160 e3c622dec2a971158bfe8bc7faee493f722199c8 SHA1 b231438a51a84d53679a226ab2036ec62bb14fd5 SHA256 80d62f3f7913c3322bf279ec26bfb12c1ce70404b00f4c87dc3ac190d150b0ab
 DIST Sphinx-1.1.2.tar.gz 2624636 RMD160 0cf4f8d799b239d54248b9abf8b40680086b7320 SHA1 92f422474e43345ab69dedceeedfd7d18c55da2d SHA256 cf66ee61eef61b7c478907282bddcdd5e04eebd69a00a2bb93881427938fe688
 DIST Sphinx-1.1.3.tar.gz 2632059 RMD160 5d4fe35a3d22d31965692d427421fde02b508a38 SHA1 6beb30f18ffac3de7689b7fd63e9a8a7d9c8df3a SHA256 34dc95b70a2b07a61b5d61034c34b05f82514aab54ad27adedb49cee911bb8e9
 EBUILD sphinx-1.0.7.ebuild 2630 RMD160 c2eef81ec87659a3e37f63a61228c938229bdedc SHA1 e2b3aa56c38c453ebc9311c558a0dbf39b3ad432 SHA256 d91450e31fb3af868de6797f693d23ff7398844b3c3a5008e872d2191063bb1e
 EBUILD sphinx-1.1.2.ebuild 2637 RMD160 46616452de6b4423174b53bc3397ed377debb628 SHA1 0350441eca594d10e63ab4a254e361aca7f95e1e SHA256 9b3c9e5ea5bc2e5e2b3a5dd65e8f66b78ad505c1c9dfb44883aad4acdc121cb2
 EBUILD sphinx-1.1.3-r1.ebuild 2716 RMD160 240454a281b8ec25b6ac57d82594403cc0a45823 SHA1 7fde5c55760be8289e681933237636ca8396b279 SHA256 cd454b3ff1fed2ee20d99a0522df341fc6265f85e1cf42ec45c9972ecd3af839
-EBUILD sphinx-1.1.3-r2.ebuild 3501 RMD160 5a6af70a0a416cae0ca8786c7a7ed603a501aecc SHA1 e6218c853fcfef61fbf0c15ceea64db317a922e1 SHA256 27e90aab3f61936c2b3788e631d7b6b348046b93ed7842847c4f25b335bb269b
+EBUILD sphinx-1.1.3-r2.ebuild 3525 RMD160 8f70ca32d0480f4c92db67dcf3c3ca9df17194fd SHA1 7b3d74d2ec1ba216b31d428e431707fb3cc58144 SHA256 43b61ccc47e8ccc732546b3d051e5e4e7ff73e4e3b43f854cea6fe74c9c9949a
 EBUILD sphinx-1.1.3.ebuild 2639 RMD160 bc5eb476ba962b79fc420b68336b4b443d4b23ee SHA1 ec2867b1f493ae2dd0e44d828dddfceb23583ebe SHA256 bf5676a31c413f535545d9ce812010ce333f11e3eb14b44375ca879df2d9f21d
-MISC ChangeLog 13300 RMD160 af2f6feb55a6befb7c670aa62e36a7448ba12f94 SHA1 f5af2c12ce69fa56a3075bbf4c8deb12ae35ff7e SHA256 b5ecb66df7df070efe269bbb9794a1e4d9545fc418c8b19b45620744cd0b9f66
+MISC ChangeLog 13459 RMD160 55ee5dc2e5189a8ed783f224cb219100652cbe58 SHA1 d6abf7d58bd6a899c507c3257ffd008a18bac942 SHA256 aaff4c55f68aae8f9312645ed380acd6fd40c14c7b2cf7f32a850ed38c72749a
 MISC metadata.xml 410 RMD160 acf3a54f1d85f83f1159eb2db443de711355623e SHA1 de7ae70d1e4b73cbc6b1b0a9b5d618ab7a3ff199 SHA256 ec32db3e710de4837b3b3f6077a1577fe318faf0b00976a972d4e269d7bd3367
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.19 (GNU/Linux)
+
+iQIcBAEBCAAGBQJPn9BvAAoJEF0huFKJUZL5bpIP/2uT3tgrL4j7cZJxZUXay8v6
+AfezTzWyoXWA3W0Pa3Y8iAJjnTQR/N6ICz9zOlsnw36iIGT6oGqF+zIA9zzhB4FN
+GbSoSVx63gvqJfFXfxshoH45CWztqFRwQzYshYAQCOggV2SAalOCQsScWoK8C+GB
+E+nAs9i/CExPYtS88AP0wexaMySLvIKFUc/IiE6MamQb5sgauQHZxcAbWqd/BSjb
+1MKoutJyrBUyG+Ly/CJVjoWqrJf2MGW9tBjOF1fk7WtTzWNTAehU/sAS+iyWypLK
+1LBKvmcFwA1OWRB9q/ealIEMYPPwmE/z1Ahd5Zo9w3Bdh7CTL3CK1mmPjrGr86w2
+B6UHgLhCG3sHUfvAkbolnDmQrBeB8UTTjZb2xgAn5Et6Qgg5V/mVimFZGHjictgb
+pJu/LJZNyR+3WDarRT/5SozpsB6kptv4YgffLTAa7SXTrUwKZ4N7LK9pZuedF8vI
+iyrkNFaLnaMvi0qJRbANYpDmvOcAqul4vH8fPOo3NUuR0gJn+6fG2w3pkEL2axhN
+ctt+y//QTaG4eke62NOIQIMuWn5YdNTOBlqe3/gui6ylYal6CvoA86HYvsaxQeTZ
+bdLixEYneZrP78wvxCvIGOaPc0cfxogLk+p6IGD7SNNSSMyx2ob6+p6HauVrSzuW
+/cM1f/EDCC66U9g6+yuQ
+=ib/z
+-----END PGP SIGNATURE-----
