@@ -1,6 +1,6 @@
 # Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-python/cvs-repo/gentoo-x86/dev-python/sphinx/sphinx-1.1.3-r2.ebuild,v 1.2 2012/04/03 15:26:24 floppym Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-python/cvs-repo/gentoo-x86/dev-python/sphinx/sphinx-1.1.3-r2.ebuild,v 1.3 2012/05/01 12:00:37 xarthisius Exp $
 
 EAPI="4"
 PYTHON_DEPEND="2"
@@ -26,7 +26,10 @@ DEPEND=">=dev-python/docutils-0.7
 	>=dev-python/jinja-2.3
 	>=dev-python/pygments-1.2
 	dev-python/setuptools
-	latex? ( dev-texlive/texlive-latexextra )"
+	latex? (
+		dev-texlive/texlive-latexextra
+		app-text/dvipng
+	)"
 RDEPEND="${DEPEND}"
 
 S="${WORKDIR}/${MY_P}"
