@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/sphinx
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-python/cvs-repo/gentoo-x86/dev-python/sphinx/ChangeLog,v 1.109 2012/04/17 21:59:32 ranger Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-python/cvs-repo/gentoo-x86/dev-python/sphinx/ChangeLog,v 1.110 2012/05/01 12:00:37 xarthisius Exp $
+
+  01 May 2012; Kacper Kowalik <xarthisius@gentoo.org> sphinx-1.1.3-r2.ebuild:
+  Add dependency on app-text/dvipng required for rendering math expressions
 
   17 Apr 2012; Brent Baude <ranger@gentoo.org> sphinx-1.1.2.ebuild:
   Marking sphinx-1.1.2 ppc64 for bug 410115
